# ChangeLog for net-wireless/blueman
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/blueman/ChangeLog,v 1.38 2015/08/08 15:42:23 mgorny Exp $

  08 Aug 2015; Michał Górny <mgorny@gentoo.org> -blueman-1.23-r1.ebuild,
  -blueman-1.23.ebuild, -blueman-1.23_p20140717-r1.ebuild,
  -files/blueman-1.23_p20140717-set-codeset-for-gettext-to-UTF-8-always.patch,
  blueman-1.23-r2.ebuild, blueman-1.98_p20150105.ebuild:
  Clean up old. Update HOMEPAGE in the remaining ebuilds.

*blueman-2.0 (08 Aug 2015)

  08 Aug 2015; Michał Górny <mgorny@gentoo.org> +blueman-2.0.ebuild,
  +files/blueman-2.0-set-codeset-for-gettext-to-UTF-8-always.patch,
  blueman-9999.ebuild:
  Version bump with schema install fix to the live ebuild.

  08 Aug 2015; Michał Górny <mgorny@gentoo.org> blueman-9999.ebuild:
  Fix USE=appindicator and deps for USE=pulseaudio.

  08 Aug 2015; Michał Górny <mgorny@gentoo.org>
  -files/blueman-9999-plugins-conf-file.patch, blueman-9999.ebuild,
  files/blueman-9999-set-codeset-for-gettext-to-UTF-8-always.patch,
  metadata.xml:
  Update and clean up the live ebuild and patches.

  04 Apr 2015; Michał Górny <mgorny@gentoo.org> blueman-9999.ebuild:
  Sync -9999. Remove conf file path patch and GConf magic, GSettings are used
  for config now. Pass proper --docdir.

  03 Mar 2015; Michał Górny <mgorny@gentoo.org>
  files/blueman-9999-set-codeset-for-gettext-to-UTF-8-always.patch:
  Fix accidental retab.

  01 Mar 2015; Michał Górny <mgorny@gentoo.org>
  files/blueman-9999-set-codeset-for-gettext-to-UTF-8-always.patch:
  Update the codeset patch for -9999.

  05 Jan 2015;  Rick Farina<zerochaos@gentoo.org> 
  -blueman-1.21-r1.ebuild, blueman-1.23-r1.ebuild,
  blueman-1.23-r2.ebuild, blueman-1.23.ebuild,
  blueman-1.23_p20140717-r1.ebuild, blueman-9999.ebuild:
  remove some repoman warnings and an old version

*blueman-1.98_p20150105 (05 Jan 2015)

  05 Jan 2015;  Rick Farina <zerochaos@gentoo.org> 