@@ -1,12 +1,12 @@
-DEFINED_PHASES=configure install postinst postrm preinst prepare setup unpack
+DEFINED_PHASES=configure install postinst postrm preinst prepare pretend setup unpack
 DEPEND=dev-python/pygobject:3 >=net-wireless/bluez-5:= python_single_target_python3_4? ( dev-lang/python:3.4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] dev-python/cython[python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] virtual/pkgconfig nls? ( dev-util/intltool sys-devel/gettext ) >=sys-apps/sed-4 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 >=dev-vcs/git-1.8.2.1
 DESCRIPTION=GTK+ Bluetooth Manager, designed to be simple and intuitive for everyday bluetooth tasks
 EAPI=5
 HOMEPAGE=https://github.com/blueman-project/blueman
 IUSE=appindicator network nls policykit pulseaudio thunar python_targets_python3_4 python_targets_python2_7 python_single_target_python3_4 python_single_target_python2_7
 LICENSE=GPL-3
-RDEPEND=dev-python/pygobject:3 >=net-wireless/bluez-5:= python_single_target_python3_4? ( dev-lang/python:3.4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] dev-python/dbus-python[python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] dev-python/pycairo[python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] sys-apps/dbus x11-libs/gtk+:3[introspection] x11-libs/libnotify[introspection] || ( x11-themes/faenza-icon-theme x11-themes/gnome-icon-theme x11-themes/mate-icon-theme ) appindicator? ( dev-libs/libappindicator:3[introspection] ) network? ( || ( net-dns/dnsmasq net-misc/dhcp >=net-misc/networkmanager-0.8 ) ) policykit? ( sys-auth/polkit ) pulseaudio? ( media-sound/pulseaudio[bluetooth] ) thunar? ( xfce-base/thunar ) !net-wireless/gnome-bluetooth
+RDEPEND=dev-python/pygobject:3 >=net-wireless/bluez-5:= python_single_target_python3_4? ( dev-lang/python:3.4 ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] dev-python/dbus-python[python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] dev-python/pycairo[python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_jython2_5(-),-python_single_target_jython2_7(-),-python_single_target_pypy(-),-python_single_target_pypy3(-),-python_single_target_python3_3(-),python_single_target_python3_4(+)?,python_single_target_python2_7(+)?] sys-apps/dbus x11-libs/gtk+:3[introspection] x11-libs/libnotify[introspection] || ( x11-themes/faenza-icon-theme x11-themes/gnome-icon-theme x11-themes/mate-icon-theme ) appindicator? ( dev-libs/libappindicator:3[introspection] ) network? ( net-dns/avahi[autoipd] net-firewall/iptables sys-apps/net-tools || ( net-dns/dnsmasq net-misc/dhcp >=net-misc/networkmanager-0.8 ) ) policykit? ( sys-auth/polkit ) pulseaudio? ( media-sound/pulseaudio[bluetooth] ) thunar? ( xfce-base/thunar ) !net-wireless/gnome-bluetooth
 REQUIRED_USE=^^ ( python_single_target_python3_4 python_single_target_python2_7 ) python_single_target_python3_4? ( python_targets_python3_4 ) python_single_target_python2_7? ( python_targets_python2_7 )
 SLOT=0
-_eclasses_=autotools	2264f05fbbbaaf83d34ec81e72b38ffd	eutils	9fb270e417e0e83d64ca52586c4a79de	git-r3	32063705ec420339d5c94dfeb87b36cb	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	62927b3db3a589b0806255f3a002d5d3	python-single-r1	351da1aa73960a282591217fb57c1bb8	python-utils-r1	0295a286ec27cab6af76b3b75ba07a3a	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=d9947d5c9eca5807ca2257279c5e2936
+_eclasses_=autotools	2264f05fbbbaaf83d34ec81e72b38ffd	eutils	9fb270e417e0e83d64ca52586c4a79de	git-r3	32063705ec420339d5c94dfeb87b36cb	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	linux-info	8cbc678e083c23e4ad546ca6509cf304	multilib	62927b3db3a589b0806255f3a002d5d3	python-single-r1	351da1aa73960a282591217fb57c1bb8	python-utils-r1	0295a286ec27cab6af76b3b75ba07a3a	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=682fe13565dbcdc078c7c8b60c1480bc
